--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,30 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
-  }
-}
-
-.App-header {
-  min-height: 100vh;
+.app {
+  background-color: silver;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  filter: invert(1) hue-rotate(180deg);
+  min-height: 100vh;
+  overflow: hidden;
 }
 
-.App-link {
-  color: rgb(112, 76, 182);
+.app__body {
+  display: flex;
+  position: relative;
+  margin-left: 85px;
+  margin-right: 85px;
+  font-family: "Ubuntu", sans-serif;
+  margin-bottom: 160px;
 }
 
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px)
-  }
-  100% {
-    transform: translateY(0px)
+.app__body img {
+  filter: invert(1) hue-rotate(180deg);
+}
+
+@media screen and (max-width: 950px) {
+  .app__body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 75px 20px;
   }
 }
