--- a/src/components/Feed.css
+++ b/src/components/Feed.css
@@ -28,8 +28,14 @@
 }
 
 .feed__header > button {
+  appearance: none;
+  border: none;
+  background-color: transparent;
+  color: rgba(0, 0, 0, 0.6);
+  font-size: 16px;
+  font-weight: 600;
+  cursor: pointer;
   min-width: auto;
-  color: rgba(0, 0, 0, 0.5);
 }
 
 .feed__sharedContent {
@@ -44,7 +50,7 @@
 .feed__userInfo {
   display: flex;
   align-items: center;
-  padding: 12px 24px;
+  padding: 12px;
 }
 
 .feed__userInfo > span {
@@ -65,31 +71,35 @@
 .feed__shareCreation {
   display: flex;
   justify-content: space-between;
-  padding: 12px 24px 12px 16px;
+  align-items: center;
+  padding: 12px;
 }
 
 .feed__attachAssets {
-  align-items: center;
   display: flex;
+  align-items: center;
+  gap: 8px;
   padding-right: 8px;
 }
 
 .feed__attachAssets > button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 40px;
   min-width: auto;
   color: rgba(0, 0, 0, 0.5);
 }
 
 .feed__shareComment {
-  padding-left: 8px;
-  margin-right: auto;
+  padding: 0 8px;
   border-left: 1px solid rgba(0, 0, 0, 0.15);
 }
 
 .feed__shareComment > button {
   display: flex;
   align-items: center;
-  margin-right: 5px;
+  justify-content: center;
   height: 40px;
   min-width: auto;
 }
@@ -99,21 +109,27 @@
 }
 
 .feed__editor {
-  padding: 12px 24px;
+  padding: 12px;
 }
 
 .feed__editor > textarea {
+  box-sizing: border-box;
   width: 100%;
   padding: 10px;
-  min-height: 100px;
+  min-height: 95px;
+  font-family: inherit;
   resize: none;
+  border: none;
 }
 
 .feed__editor > input {
+  box-sizing: border-box;
   width: 100%;
   height: 35px;
+  font-family: inherit;
   font-size: 16px;
   margin-bottom: 20px;
+  border: none;
 }
 
 .feed__uploadImg {
