--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -8,7 +8,7 @@
   font-size: 16px;
   padding: 10px 12px;
   text-decoration: none;
-  background-color: gray;
+  background-color: transparent;
   color: rgba(0, 0, 0, 0.6);
   margin-right: 45px;
   border-radius: 8px;
@@ -17,11 +17,11 @@
   right: 135px;
   border: none;
   outline: none;
+  transition: all 0.3s ease-in-out;
 }
 
 .login__joinNow:hover {
-  background-color: rgba(0, 0, 0, 0.08);
-  color: black;
+  color: #0a66c2;
   text-decoration: none;
 }
 
@@ -31,7 +31,7 @@
   border-radius: 24px;
   transition-duration: 167ms;
   font-size: 16px;
-  font-weight: 600;
+  font-weight: 700;
   padding: 10px 18px;
   text-align: center;
   background-color: rgba(0, 0, 0, 0);
@@ -116,13 +116,14 @@
   justify-content: center;
   background-color: gray;
   align-items: center;
-  height: 40px;
+  height: 50px;
   width: 100%;
   border-radius: 5px;
   box-shadow: inset 0 0 0 1px rgb(0 0 0 / 60%),
     inset 0 0 0 2px rgb(0 0 0 / 0%) inset 0 0 0 1px rgb(0 0 0 / 0);
   transition-duration: 167ms;
   font-size: 20px;
+  font-weight: 700;
   outline: none;
   border: none;
   color: black;
@@ -132,6 +133,11 @@
 .login__buttonGoogle > img {
   margin-right: 25px;
   filter: invert(1) hue-rotate(180deg);
+  background-color: whitesmoke;
+  padding: 4px;
+  border-radius: 50%;
+  width: 18px;
+  aspect-ratio: 1/1;
 }
 
 .login__formContainer > form > h3 {
@@ -204,17 +210,20 @@
     font-size: 15px;
     padding: 10px 8px;
     width: 250px;
+    margin-top: 20px;
   }
   .login__heroImg > p {
     text-align: center;
     width: 100%;
     font-size: 2rem;
     margin-bottom: 20px;
+    line-height: normal;
   }
   .login__heroImg > img {
     display: none;
   }
   .login__buttonGoogle {
+    height: 40px;
     font-size: 14px;
     white-space: nowrap;
     width: 250px;
