--- a/src/components/Widgets.css
+++ b/src/components/Widgets.css
@@ -13,7 +13,6 @@
   border: 1px solid lightgray;
   box-shadow: 0px 0px 5px gray;
   font-family: "Ubuntu", sans-serif;
-  padding-bottom: 10px;
 }
 
 .widgets > a {
@@ -40,8 +39,7 @@
 }
 
 .widgets__article:hover {
-  background-color: black;
-  color: whitesmoke;
+  border-radius: 10px;
 }
 
 .widgets__articleLeft {
@@ -59,6 +57,11 @@
 
 .widgets__articleRight > h4 {
   font-size: 14px;
+  transition: all 0.3s ease-in-out;
+}
+
+.widgets__articleRight:hover > h4 {
+  color: #0177b7;
 }
 
 .widgets__articleRight > p {
